--- a/SimpleCalendar/DiaCalendario.xaml
+++ b/SimpleCalendar/DiaCalendario.xaml
@@ -1,8 +1,9 @@
 <UserControl x:Class="SimpleCalendar.DiaCalendario"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Grid>
-		<Image x:Name="imgFondo"/>
-		<TextBlock x:Name="txtDia"/>
+	
+	<Grid x:Name="gDiaCalendario" >
+			<TextBlock x:Name="txtDia" Background="Transparent" HorizontalAlignment="Center" />
 	</Grid>
+
 </UserControl>
