--- a/SimpleCalendar/DiaCalendario.xaml
+++ b/SimpleCalendar/DiaCalendario.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	
-	<Grid x:Name="gDiaCalendario" >
+	<Grid x:Name="gDiaCalendario" AllowDrop="True" Drop="GDiaCalendario_Drop" MouseEnter="GDiaCalendario_MouseEnter" MouseLeave="GDiaCalendario_MouseLeave" MouseLeftButtonUp="GDiaCalendario_MouseLeftButtonUp" MouseWheel="GDiaCalendario_MouseWheel">
 			<TextBlock x:Name="txtDia" Background="Transparent" HorizontalAlignment="Center" />
 	</Grid>
 
