--- a/SimpleCalendar/DiaViewer.xaml
+++ b/SimpleCalendar/DiaViewer.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="SimpleCalendar.DiaViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Grid>
+	<Grid Drop="Grid_Drop">
 		<Viewbox>
 			<TextBlock x:Name="txtDia" HorizontalAlignment="Center"/>
 		</Viewbox>
