--- a/SimpleCalendar/DiaViewer.xaml
+++ b/SimpleCalendar/DiaViewer.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="SimpleCalendar.DiaViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Grid Drop="Grid_Drop" AllowDrop="True" MouseWheel="Grid_MouseWheel" MouseLeftButtonUp="Grid_MouseLeftButtonUp" >
+	<Grid Drop="Grid_Drop" AllowDrop="True" MouseWheel="Grid_MouseWheel" MouseLeftButtonUp="Grid_MouseLeftButtonUp" MouseRightButtonUp="Grid_MouseRightButtonUp" >
 		<Viewbox >
 			<TextBlock x:Name="txtDia" HorizontalAlignment="Center"  MouseEnter="Grid_MouseEnter" MouseLeave="Grid_MouseLeave" />
 		</Viewbox>
