desarrollando...de momento hay un lio xD

--- a/CalendarioSimple/Window1.xaml
+++ b/CalendarioSimple/Window1.xaml
@@ -1,9 +1,8 @@
 ﻿<Window x:Class="CalendarioSimple.Window1"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	Title="CalendarioSimple" Height="300" Width="300"
+        xmlns:local="clr-namespace:CalendarioSimple"
+	Title="Calendario Simple" Height="300" Width="300"
 	>
-	<Grid>
-		
-	</Grid>
+	<local:CalendarioViewer x:Name="calendario" />
 </Window>
