--- a/KawaiCalendar/MainWindow.xaml
+++ b/KawaiCalendar/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KawaiCalendar.Calendar"
         mc:Ignorable="d"
-        Title="KawaiCalendar V1.0" Height="450" Width="800">
+        Title="KawaiCalendar V1.0" Height="450" Width="800"  KeyDown="Window_KeyDown">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
