--- a/KawaiCalendar/Calendar/DiaMes.xaml
+++ b/KawaiCalendar/Calendar/DiaMes.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KawaiCalendar.Calendar"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" MouseEnter="UserControl_MouseEnter" MouseLeave="UserControl_MouseLeave" MouseRightButtonDown="UserControl_MouseRightButtonDown">
+             d:DesignHeight="450" d:DesignWidth="800" MouseEnter="UserControl_MouseEnter" MouseLeave="UserControl_MouseLeave" MouseRightButtonDown="UserControl_MouseRightButtonDown" MouseLeftButtonDown="UserControl_MouseLeftButtonDown">
     <Grid>
         <Image x:Name="imgDia" Stretch="UniformToFill"/>
         <Viewbox>
