--- a/KawaiCalendar/PicViewer.xaml
+++ b/KawaiCalendar/PicViewer.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KawaiCalendar"
         mc:Ignorable="d"
-        Title="PicViewer" Height="450" Width="800">
+        Title="PicViewer" Height="450" Width="800" MouseLeftButtonDown="Window_MouseLeftClick" MouseRightButtonDown="Window_MouseRightButtonDown">
     <Image x:Name="img"/>
 </Window>
